# RocketMQ-Client4CPP

./: .gitignore  CMakeLists.txt  README.md  README.txt  deploy.sh
docs/: ExportPrivateKey.java  client2.c  example_client.c  example_client.txt  example_server.txt  server2.c  ssl.txt  ubuntu.txt  variable_scope.txt  变量生命周期.txt
docs/cacerts/: client.pem  client.pkey  server.pem
example/simple/: CMakeLists.txt  Producer.cpp  Producer.sln  Producer.vcxproj  PullConsumer.cpp  PullConsumer.vcxproj  PushConsumer.cpp  PushConsumer.vcxproj  build.sh
include/: AllocateMessageQueueStrategy.h  ClientConfig.h  ConsumeMessageHook.h  ConsumeType.h  DefaultMQProducer.h  DefaultMQPullConsumer.h  DefaultMQPushConsumer.h  MQAdmin.h  MQClientException.h  MQConsumer.h  MQProducer.h  MQPullConsumer.h  MQPushConsumer.h  Message.h  MessageExt.h  MessageListener.h  MessageQueue.h  MessageQueueListener.h  OffsetStore.h  PullCallback.h  PullResult.h  QueryResult.h  RocketMQClient.h  SendCallback.h  SendMessageHook.h  SendResult.h  TopicFilterType.h
libs/: readme.txt
libs/jsoncpp/: README.txt
libs/jsoncpp-src-0.5.0/: CMakeLists.txt
libs/jsoncpp-src-0.5.0/makefiles/: Makefile
libs/jsoncpp-src-0.5.0/makefiles/vs2010/: jsontest.vcxproj  lib_json.vcxproj  test_lib_json.vcxproj
libs/jsoncpp-src-0.5.0/src/lib_json/: json_reader.cpp
project/: Makefile  RocketMQClient.sln  RocketMQClient.vcxproj  RocketMQClient.vcxproj.filters  RocketMQClient2013.sln  RocketMQClient2013.vcxproj  RocketMQClient2013.vcxproj.filters
src/: ClientConfig.cpp  ClientRemotingProcessor.cpp  ClientRemotingProcessor.h  CommunicationMode.h  FindBrokerResult.h  Logger.cpp  Logger.h  MQAdminImpl.cpp  MQAdminImpl.h  MQClientAPIImpl.cpp  MQClientAPIImpl.h  MQClientFactory.cpp  MQClientFactory.h  MQClientManager.cpp  MQClientManager.h  dllmain.cpp
src/common/: ConsumeStats.h  FilterAPI.h  MQVersion.cpp  MQVersion.h  MessageSysFlag.cpp  MessageSysFlag.h  MixAll.cpp  MixAll.h  NamesrvConfig.h  NamesrvUtil.h  PermName.cpp  PermName.h  PullSysFlag.cpp  PullSysFlag.h  SendResult.cpp  ServiceState.h  ServiceThread.cpp  ServiceThread.h  SubscriptionGroupConfig.h  TopAddressing.h  TopicConfig.cpp  TopicConfig.h  TopicStatsTable.h  UtilAll.h  Validators.cpp  Validators.h  VirtualEnvUtil.cpp  VirtualEnvUtil.h
src/consumer/: AllocateMessageQueueStrategyInner.h  ConsumeMessageConcurrentlyService.cpp  ConsumeMessageConcurrentlyService.h  ConsumeMessageOrderlyService.cpp  ConsumeMessageOrderlyService.h  ConsumeMessageService.h  ConsumeType.cpp  ConsumeType.h  ConsumerInvokeCallback.cpp  ConsumerInvokeCallback.h  ConsumerStatManage.h  DefaultMQPullConsumer.cpp  DefaultMQPullConsumerImpl .cpp  DefaultMQPullConsumerImpl.cpp  DefaultMQPullConsumerImpl.h  DefaultMQPushConsumer.cpp  DefaultMQPushConsumerImpl .cpp  DefaultMQPushConsumerImpl.cpp  DefaultMQPushConsumerImpl.h  LocalFileOffsetStore.cpp  LocalFileOffsetStore.h  MQConsumerInner.h  MessageListener.h  MessageQueueLock.h  ProcessQueue.cpp  ProcessQueue.h  PullAPIWrapper.cpp  PullAPIWrapper.h  PullMessageService.cpp  PullMessageService.h  PullRequest .cpp  PullRequest.cpp  PullRequest.h  PullResultExt.h  RebalanceImpl.cpp  RebalanceImpl.h  RebalancePullImpl.cpp  RebalancePullImpl.h  RebalancePushImpl.cpp  RebalancePushImpl.h  (+6 more)
src/kpr/: AtomicValue.cpp  AtomicValue.h  Condition.cpp  Condition.h  Exception.h  KPRTypes.h  KPRUtil.cpp  KPRUtil.h  Monitor.cpp  Monitor.h  Mutex.cpp  Mutex.h  RefCount.cpp  RefCount.h  RefHandle.h  ScopedLock.h  Semaphore.cpp  Semaphore.h  Thread.cpp  Thread.h  ThreadLocal.cpp  ThreadLocal.h  ThreadPool.cpp  ThreadPool.h  ThreadPoolWork.h  TimerTaskManager.cpp  TimerTaskManager.h  TimerThread.cpp  TimerThread.h
src/message/: Message.cpp  MessageDecoder.cpp  MessageDecoder.h  MessageExt.cpp  MessageId.h  MessageQueue.cpp
src/producer/: DefaultMQProducer.cpp  DefaultMQProducerImpl.cpp  DefaultMQProducerImpl.h  LocalTransactionExecuter.h  MQProducerInner.h  MessageQueueSelector.h  ProducerInvokeCallback.cpp  ProducerInvokeCallback.h  TopicPublishInfo.h  TransactionCheckListener.h  TransactionMQProducer.h
src/protocol/: CommandCustomHeader.cpp  CommandCustomHeader.h  GetConsumerListByGroupResponseBody.h  HeartbeatData.cpp  HeartbeatData.h  KVTable.h  LockBatchBody.cpp  LockBatchBody.h  MQProtos.h  RemotingCommand.cpp  RemotingCommand.h  RemotingSerializable.h  TopicList.h  TopicRouteData.h
src/transport/: InvokeCallback.h  RemoteClientConfig.h  ResponseFuture.cpp  ResponseFuture.h  SocketUtil.cpp  SocketUtil.h  TcpRemotingClient.cpp  TcpRemotingClient.h  TcpRequestProcessor.h  TcpTransport.cpp  TcpTransport.h
test/benchmark/: Producer.cpp  Producer.sln  build.sh
